{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 26,
  "lineage": "3b945037-0603-b158-b363-5db0bf766763",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:network-acl/acl-067e5ee5efadc9514",
            "default_network_acl_id": "acl-067e5ee5efadc9514",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-067e5ee5efadc9514",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "140687771725",
            "subnet_ids": [
              "subnet-02d5d555bd7b281df",
              "subnet-04b295ba79070530c",
              "subnet-0adb997eaacb8f42c",
              "subnet-0bdca39a62e463688",
              "subnet-0e60b579be8e466a2",
              "subnet-0eb715b56bbf9839a"
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-04d1d0a413178f84b",
            "default_route_table_id": "rtb-04d1d0a413178f84b",
            "id": "rtb-04d1d0a413178f84b",
            "owner_id": "140687771725",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:security-group/sg-0fc692aa45c8c0be5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fc692aa45c8c0be5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "140687771725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00194400a4eecd688",
            "arn": "arn:aws:ec2:us-east-1:140687771725:elastic-ip/eipalloc-00194400a4eecd688",
            "domain": "vpc",
            "id": "eipalloc-00194400a4eecd688",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-54-5-200.compute-1.amazonaws.com",
            "public_ip": "52.54.5.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:internet-gateway/igw-0d9aa7d1f9b3eb12d",
            "id": "igw-0d9aa7d1f9b3eb12d",
            "owner_id": "140687771725",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00194400a4eecd688",
            "association_id": "eipassoc-0343d1eef3a40f5bf",
            "connectivity_type": "public",
            "id": "nat-0afad1aab423282da",
            "network_interface_id": "eni-019e7439b01441cbc",
            "private_ip": "10.0.101.166",
            "public_ip": "52.54.5.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0adb997eaacb8f42c",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08a2bf219cba3d8b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0afad1aab423282da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a2bf219cba3d8b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d9aa7d1f9b3eb12d",
            "id": "r-rtb-013a5829f2d677f971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013a5829f2d677f97",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-0f2763c84d74054f0",
            "id": "rtb-0f2763c84d74054f0",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-08a2bf219cba3d8b8",
            "id": "rtb-08a2bf219cba3d8b8",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-013a5829f2d677f97",
            "id": "rtb-013a5829f2d677f97",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44c343ed39fab13",
            "route_table_id": "rtb-0f2763c84d74054f0",
            "subnet_id": "subnet-0eb715b56bbf9839a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b509b279887476",
            "route_table_id": "rtb-0f2763c84d74054f0",
            "subnet_id": "subnet-0bdca39a62e463688"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42e03677b3676c8",
            "route_table_id": "rtb-08a2bf219cba3d8b8",
            "subnet_id": "subnet-0e60b579be8e466a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0427049b77c53abe7",
            "route_table_id": "rtb-08a2bf219cba3d8b8",
            "subnet_id": "subnet-04b295ba79070530c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ee8a109927b30a0",
            "route_table_id": "rtb-013a5829f2d677f97",
            "subnet_id": "subnet-0adb997eaacb8f42c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d6eb0eabd7dc25a",
            "route_table_id": "rtb-013a5829f2d677f97",
            "subnet_id": "subnet-02d5d555bd7b281df"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0eb715b56bbf9839a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb715b56bbf9839a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0bdca39a62e463688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdca39a62e463688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0e60b579be8e466a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60b579be8e466a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-04b295ba79070530c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b295ba79070530c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0adb997eaacb8f42c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb997eaacb8f42c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-02d5d555bd7b281df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d5d555bd7b281df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-014702a7e9ddd1019"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:vpc/vpc-014702a7e9ddd1019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067e5ee5efadc9514",
            "default_route_table_id": "rtb-04d1d0a413178f84b",
            "default_security_group_id": "sg-0fc692aa45c8c0be5",
            "dhcp_options_id": "dopt-06938e4f834226f5a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014702a7e9ddd1019",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d1d0a413178f84b",
            "owner_id": "140687771725",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          }
        }
      ]
    }
  ]
}